force-app/main/default/objects/ULBC_Email_Settings__c/ULBC_Email_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Org-wide settings for the custom mass-email send + tracking system. Hierarchy type allows org-default value with optional per-user/profile overrides if needed in future. Values read by ULBC_EmailSendService, ULBC_EmailHtmlMutator, ULBC_EmailSendQueueable, and ULBC_EmailTrackingResource.</description>
    <label>ULBC Email Settings</label>
</CustomObject>