force-app/main/default/objects/ULBC_Email_Settings__c/fields/DefaultFromAddress__c.field-meta.xml
<CustomField>
    <fullName>DefaultFromAddress__c</fullName>
    <description>Default sender address. Informational only — actual delivery uses OrgWideEmailAddressId__c, which Salesforce requires to be a verified OrgWideEmailAddress. Storing the address here lets the LWC composer show "From: ..." in the preview without an extra SOQL.</description>
    <label>Default From Address</label>
    <type>Email</type>
</CustomField>