force-app/main/default/objects/ULBC_Email_Settings__c/fields/DefaultFromName__c.field-meta.xml
<CustomField>
    <fullName>DefaultFromName__c</fullName>
    <description>Display name shown next to the from address in the recipient's inbox (e.g. "ULBC Trust"). Informational; actual delivery uses the verified OrgWideEmailAddress display name configured in Setup.</description>
    <label>Default From Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>