force-app/main/default/objects/ULBC_Email_Settings__c/fields/DefaultReplyTo__c.field-meta.xml
<CustomField>
    <fullName>DefaultReplyTo__c</fullName>
    <description>Reply-to address applied via Messaging.SingleEmailMessage.setReplyTo(). Lets replies route to a monitored mailbox even when the OrgWideEmailAddress is a no-reply identity.</description>
    <label>Default Reply-To</label>
    <type>Email</type>
</CustomField>