force-app/main/default/objects/ULBC_Email_Settings__c/fields/EnableTracking__c.field-meta.xml
<CustomField>
    <fullName>EnableTracking__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Master kill switch. When false, ULBC_EmailHtmlMutator skips pixel injection and link rewriting — emails still send but no opens/clicks are recorded. Use for sensitive or one-off comms where tracking would be inappropriate.</description>
    <label>Enable Tracking</label>
    <type>Checkbox</type>
</CustomField>