force-app/main/default/objects/ULBC_Email_Settings__c/fields/FooterHtml__c.field-meta.xml
<CustomField>
    <fullName>FooterHtml__c</fullName>
    <description>HTML footer block appended to every outgoing email by ULBC_EmailHtmlMutator. Must contain registered charity name + number, postal address, sender contact, and the literal token {{UNSUB_URL}} which the mutator replaces with the per-recipient unsubscribe URL. Required by UK GDPR / PECR for marketing emails.</description>
    <label>Footer HTML</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>