force-app/main/default/objects/ULBC_Email_Settings__c/fields/IPHashSalt__c.field-meta.xml
<CustomField>
    <fullName>IPHashSalt__c</fullName>
    <description>Secret salt prefixed to recipient IP before SHA-256 hashing. Stored on ULBC_Email_Event__c.ULBC_IP_Hash__c so historical IPs cannot be recovered (UK GDPR data minimisation), while same-day rate-limiting and forensic correlation remain possible. Rotate periodically — Phase v2 adds a scheduled rotation job. Treat as a secret: no permission set grants read.</description>
    <label>IP Hash Salt</label>
    <length>64</length>
    <type>Text</type>
</CustomField>