force-app/main/default/objects/ULBC_Email_Settings__c/fields/OrgWideEmailAddressId__c.field-meta.xml
<CustomField>
    <fullName>OrgWideEmailAddressId__c</fullName>
    <description>Salesforce Id of the verified OrgWideEmailAddress used for outbound sends. Manually set after the address is verified in Setup → Email → Organization-Wide Addresses. Required before the first send — ULBC_EmailSendQueueable refuses to send if blank. 18-character record Id.</description>
    <label>OrgWideEmailAddress Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>