force-app/main/default/objects/ULBC_Email_Settings__c/fields/TrackingBaseURL__c.field-meta.xml
<CustomField>
    <fullName>TrackingBaseURL__c</fullName>
    <description>Public Site origin used to build pixel and click-redirect URLs in outbound emails. Example: https://ulbc.my.salesforce-sites.com/donate. The /email/* REST resources are appended at send time. Set to the same Site that hosts /stripe/webhook so guest-user permissions are managed in one place.</description>
    <label>Tracking Base URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>